--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 :root{
-    --cor-branca:#FFFFFF;
+    --cor-roxa:#4f044a;
+    --lilas-secundario:#f801a2df;
+    --botao-vermelho:#d84da9;
+    --cor-de-fundo:#f894d1;
+}
+
+body{
+    background-color: var(--cor-de-fundo);
+    color: var(--cor-roxa);
+} 
+
+*{
+    margin: 0;
+    padding:0;
 }
